feat: setup TypeORM, Swagger and PostgreSQL for products module '

--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,16 @@
 NODE_ENV=development
 PORT=3000
 
-# Database (example - uncomment and configure when needed)
-# DATABASE_URL=postgresql://user:password@localhost:5432/dbname
-# DATABASE_HOST=localhost
-# DATABASE_PORT=5432
-# DATABASE_USER=user
-# DATABASE_PASSWORD=password
-# DATABASE_NAME=dbname
+# Database - PostgreSQL
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_NAME=products_db
 
-# API Keys (example - uncomment and configure when needed)
-# API_KEY=your-api-key-here
-# JWT_SECRET=your-jwt-secret-here
+# TypeORM Configuration
+TYPEORM_SYNC=false
+TYPEORM_LOGGING=true
 
 # Context7 MCP Server (optional - for library documentation)
 # Get your API key from https://context7.com
